fix requirements for fastapi + openai sdk

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-Flask==3.0.3
-fastapi
-uvicorn
-pydantic
-openai==0.27.0
-requests
-httpx
-tiktoken
+fastapi==0.115.0
+uvicorn==0.30.6
+requests==2.32.3
+openai==1.40.0
+pydantic==2.8.2
